force-app/force-app/main/default/objects/Lead/fields/Business_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Legal_Name__c</fullName>
    <description>Business Legal Name - Sertifi #1; Required for qualification</description>
    <label>Business Legal Name</label>
    <required>true</required>
    <type>Text</type>
    <length>255</length>
</CustomField>