force-app/force-app/main/default/objects/Lead/fields/Consent_Source__c.field-meta.xml
<CustomField>
    <fullName>Consent_Source__c</fullName>
    <description>Consent Source - Web form, Phone call, etc.</description>
    <label>Consent Source</label>
    <type>Text</type>
    <length>80</length>
</CustomField>