force-app/force-app/main/default/objects/Lead/fields/Consent_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Consent_Timestamp__c</fullName>
    <description>Consent Timestamp - Auto-stamp when consent given</description>
    <label>Consent Timestamp</label>
    <type>DateTime</type>
</CustomField>