force-app/force-app/main/default/objects/Lead/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country - For routing/qualification</description>
    <label>Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Country_GVS</fullName>
                <default>true</default>
                <label>Country_GVS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>