force-app/force-app/main/default/objects/Lead/fields/DBA_Name__c.field-meta.xml
<CustomField>
    <fullName>DBA_Name__c</fullName>
    <description>DBA Name - Sertifi #2; Trade name</description>
    <label>DBA Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>