force-app/force-app/main/default/objects/Lead/fields/Disqualify_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualify_Reason__c</fullName>
    <description>Disqualify Reason - Why disqualified</description>
    <label>Disqualify Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disqualify_Reason_GVS</fullName>
                <default>true</default>
                <label>Disqualify_Reason_GVS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>