force-app/force-app/main/default/objects/Lead/fields/Email_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_In__c</fullName>
    <description>Email Opt-In - TCPA compliance</description>
    <label>Email Opt-In</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>