force-app/force-app/main/default/objects/Lead/fields/Gate_Date__c.field-meta.xml
<CustomField>
    <fullName>Gate_Date__c</fullName>
    <description>Gate Date - When gate logic ran</description>
    <label>Gate Date</label>
    <type>DateTime</type>
</CustomField>