force-app/force-app/main/default/objects/Lead/fields/Gate_Result__c.field-meta.xml
<CustomField>
    <fullName>Gate_Result__c</fullName>
    <description>Gate Result - Automation-set qualification result</description>
    <label>Gate Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualified</fullName>
                <default>true</default>
                <label>Qualified</label>
            </value>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Manual Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>