force-app/force-app/main/default/objects/Lead/fields/Gate_Score__c.field-meta.xml
<CustomField>
    <fullName>Gate_Score__c</fullName>
    <description>Gate Score - Calculated qualification score</description>
    <label>Gate Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>