force-app/force-app/main/default/objects/Lead/fields/Has_Processing_History__c.field-meta.xml
<CustomField>
    <fullName>Has_Processing_History__c</fullName>
    <description>Has Processing History - 3+ months processing?</description>
    <label>Has Processing History</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>