force-app/force-app/main/default/objects/Lead/fields/Marketing_Channel__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Channel__c</fullName>
    <description>Marketing Channel - Google, Referral, ISO Partner, Social, Event, etc.</description>
    <label>Marketing Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marketing_Channel_GVS</fullName>
                <default>true</default>
                <label>Marketing_Channel_GVS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>