force-app/force-app/main/default/objects/Lead/fields/Marketing_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Source_Detail__c</fullName>
    <description>Marketing Source Detail - Campaign name, referrer, etc.</description>
    <label>Marketing Source Detail</label>
    <type>Text</type>
    <length>255</length>
</CustomField>