force-app/force-app/main/default/objects/Lead/fields/Projected_Monthly_Volume__c.field-meta.xml
<CustomField>
    <fullName>Projected_Monthly_Volume__c</fullName>
    <description>Projected Monthly Volume - Qualification threshold</description>
    <label>Projected Monthly Volume</label>
    <required>true</required>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>