force-app/force-app/main/default/objects/Lead/fields/Referral_Partner__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partner__c</fullName>
    <description>Referral Partner - If referred by ISO partner</description>
    <label>Referral Partner</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>account</referenceTo>
    <relationshipName>ReferralPartner</relationshipName>
</CustomField>