force-app/force-app/main/default/objects/Lead/fields/Routed_Partner__c.field-meta.xml
<CustomField>
    <fullName>Routed_Partner__c</fullName>
    <description>Routed Partner - ISO partner assignment</description>
    <label>Routed Partner</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>account</referenceTo>
    <relationshipName>RoutedPartner</relationshipName>
</CustomField>