force-app/force-app/main/default/objects/Lead/fields/SMS_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>SMS_Opt_In__c</fullName>
    <description>SMS Opt-In - TCPA compliance</description>
    <label>SMS Opt-In</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>